--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
-    "dotenv": "^16.5.0",
     "eslint": "^9.29.0",
-    "express": "^5.1.0",
     "husky": "^9.1.7",
     "install": "^0.13.0",
     "jest": "^29.7.0",
@@ -56,6 +54,8 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "eslint-plugin-sonarjs": "^3.0.3"
+    "dotenv": "^16.5.0",
+    "eslint-plugin-sonarjs": "^3.0.3",
+    "express": "^5.1.0"
   }
 }
