--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,6 +20,13 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
+
+    - name: 🧪 Check if package-lock.json is in sync
+      run: |
+        git diff --exit-code package-lock.json || (
+          echo "❌ package-lock.json is out of sync with package.json. Run 'npm install' and commit the changes.";
+          exit 1
+        )
       
     - name: Run type check
       run: npm run type-check
