--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "eslint-plugin-sonarjs": "^3.0.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
